<resources>
    <string name="app_name">myFirstApp</string>
    <string name="first_app_label">this is first app</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="home_text">what  are you doing ha</string>
    <string name="action_share">分享</string>
    <string name="action_edit">编辑</string>
    <string name="action_more">更多</string>

    <!-- 当你在用户界面定义一个文本时，应该把每一个文本字符串列入资源文件。
    这样做的好处是：对于所有字符串值，字符串资源能够单独的修改，
    在资源文件里你可以很容易的找到并且做出相应的修改。
    通过选择定义每个字符串，还允许你用不同语言本地化 APP。-->


    <!-- buttons -->
    <string name="first_but_01">button01</string>
    <string name="but_02">button02</string>


    <!-- activities info -->


    <!--  -->
</resources>
